--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "test": "jest --watchAll",
+    "e2e": "start-server-and-test start 3000 \"cypress open --e2e\"",
+    "e2e:headless": "start-server-and-test start 3000 \"cypress run --e2e\"",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,6 +16,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "@types/styled-components": "^5.1.26",
+    "dotenv": "^16.1.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "mongoose": "^7.2.1",
@@ -26,7 +29,9 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
+    "cypress": "^12.14.0",
     "jest": "^29.5.0",
-    "mongodb-memory-server": "^8.12.2"
+    "mongodb-memory-server": "^8.12.2",
+    "start-server-and-test": "^2.0.0"
   }
 }
