--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "jose": "^4.14.4",
     "mongoose": "^7.3.0",
     "next": "13.4.6",
     "react": "18.2.0",
@@ -27,6 +29,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^29.5.2",
     "cypress": "^12.14.0",
     "jest": "^29.5.0",
