--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "next": "13.4.6",
     "react": "18.2.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "cypress": "^12.14.0",
     "jest": "^29.5.0",
     "mongodb-memory-server": "^8.13.0",
