--- a/package.json
+++ b/package.json
@@ -6,33 +6,35 @@
     "test": "jest --watchAll",
     "e2e": "start-server-and-test start 3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test start 3000 \"cypress run --spec cypress/e2e/${spec=**/*}.cy.ts --e2e\"",
+    "compile": "tsc --incremental false",
+    "update:latest": "ncu -u && npm install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.17",
+    "@types/react-dom": "18.2.7",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.0",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
+    "dotenv": "^16.3.1",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.12",
     "jose": "^4.14.4",
-    "mongoose": "^7.3.0",
-    "next": "13.4.6",
+    "mongoose": "^7.4.1",
+    "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.9.0",
-    "styled-components": "^6.0.0-rc.3",
-    "typescript": "5.1.3"
+    "react-icons": "^4.10.1",
+    "styled-components": "^6.0.5",
+    "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/jest": "^29.5.2",
-    "cypress": "^12.14.0",
-    "jest": "^29.5.0",
+    "@types/jest": "^29.5.3",
+    "cypress": "^12.17.2",
+    "jest": "^29.6.2",
     "mongodb-memory-server": "^8.13.0",
     "start-server-and-test": "^2.0.0"
   }
