--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "sharp": "^0.32.4",
     "stripe": "^12.17.0",
     "styled-components": "^6.0.5",
     "typescript": "5.1.6"
