--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "webhook": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
+    "stripe-webhook": "stripe listen --forward-to localhost:3000/api/stripe/webhook",
+    "trigger-payment-success": "stripe trigger checkout.session.completed"
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.1",
