--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Copy this file to .env and replace the values with your own
+# Copy this file to .env file and replace the values with your own
 CYPRESS_TEST=false
 TEST_MONGO_URI=
 DEV_MONGO_URI=
