--- a/package.json
+++ b/package.json
@@ -16,33 +16,34 @@
     "trigger-payment-success": "stripe trigger checkout.session.completed"
   },
   "dependencies": {
-    "@paypal/react-paypal-js": "^8.1.4",
-    "@types/node": "20.11.28",
-    "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22",
-    "@vercel/kv": "^1.0.1",
+    "@paypal/react-paypal-js": "^8.7.0",
+    "@types/node": "22.9.1",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@vercel/kv": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.3",
-    "jose": "^5.2.3",
+    "eslint": "9.15.0",
+    "eslint-config-next": "15.0.3",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2",
-    "next": "14.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^5.0.1",
-    "sharp": "^0.33.2",
-    "stripe": "^14.21.0",
-    "styled-components": "^6.1.8",
-    "typescript": "5.4.2"
+    "mongoose": "^8.8.2",
+    "next": "15.0.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
+    "sharp": "^0.33.5",
+    "stripe": "^17.4.0",
+    "styled-components": "^6.1.13",
+    "typescript": "5.6.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^29.5.12",
-    "cypress": "^13.7.0",
+    "@types/jest": "^29.5.14",
+    "cypress": "^13.16.0",
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^9.1.7",
-    "start-server-and-test": "^2.0.3"
+    "mongodb-memory-server": "^10.1.2",
+    "start-server-and-test": "^2.0.8",
+    "ts-node": "^10.9.2"
   }
 }
