--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cypress": "^13.16.0",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.2",
+    "msw": "^2.7.3",
     "start-server-and-test": "^2.0.8",
     "ts-node": "^10.9.2"
   }
