--- a/package.json
+++ b/package.json
@@ -17,35 +17,34 @@
     "trigger-payment-success": "stripe trigger checkout.session.completed"
   },
   "dependencies": {
-    "@paypal/react-paypal-js": "^8.7.0",
-    "@types/node": "22.9.1",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
+    "@paypal/react-paypal-js": "^8.8.3",
+    "@types/node": "22.15.2",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "@vercel/kv": "^3.0.0",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5",
-    "eslint": "9.15.0",
-    "eslint-config-next": "15.0.3",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
+    "eslint": "9.25.1",
+    "eslint-config-next": "15.3.1",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.2",
-    "next": "15.0.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-icons": "^5.3.0",
-    "sharp": "^0.33.5",
-    "stripe": "^17.4.0",
-    "styled-components": "^6.1.13",
-    "typescript": "5.6.3"
+    "mongoose": "^8.13.3",
+    "next": "^15.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "sharp": "^0.34.1",
+    "stripe": "^18.0.0",
+    "styled-components": "^6.1.17",
+    "typescript": "5.8.3"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.14",
-    "cypress": "^13.16.0",
+    "cypress": "^14.3.2",
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^10.1.2",
-    "msw": "^2.7.3",
-    "start-server-and-test": "^2.0.8",
+    "mongodb-memory-server": "^10.1.4",
+    "msw": "^2.7.5",
+    "start-server-and-test": "^2.0.11",
     "ts-node": "^10.9.2"
   }
 }
